# app

./: .gitignore  CMakeLists.txt  CMakePresets.json  CREDITS.md  LICENSE  README.md  about_dialog.cpp  about_dialog.ui  app.qrc  app.qss  base_item_views.cpp  base_item_views.h  callstack_model.cpp  callstack_model.h  code_browser.cpp  code_browser.h  color_generator.cpp  color_generator.h  common_ui_tools.cpp  common_ui_tools.h  completer.cpp  completer.h  config.cmake  cpp_highlighter.cpp  cpp_highlighter.h  data_parser.h  data_storage.cpp  data_storage.h  entry_model.cpp  entry_model.h  extra_message_model.cpp  extra_message_model.h  filter_item_editor.cpp  filter_item_editor.h  filter_item_editor.ui  filter_model.cpp  filter_model.h  filter_tree_view.cpp  filter_tree_view.h  general_setting_widget.cpp  (+79 more)
doc/: trace.txt
doc/sphinx/: Makefile
doc/sphinx/source/: conf.py  index.rst  syntax.rst
image_lib/: abstract_graphics_shape_item.cpp  abstract_graphics_shape_item.h  abstract_simple_item.cpp  abstract_simple_item.h  graphics_image_item.cpp  graphics_image_item.h  graphics_marker_item.cpp  graphics_marker_item.h  graphics_rect_item.cpp  graphics_rect_item.h  image.cpp  image.h  image_browser.cpp  image_browser.h  image_browser.ui  image_scene.cpp  image_scene.h  image_table_model.cpp  image_table_model.h  image_view.cpp  image_view.h  pixel_trace_graphics_item.cpp  pixel_trace_graphics_item.h
test/: test_filter.cpp  test_parse_funcsig.cpp
test_apps/c/: CMakeLists.txt  main.c
test_apps/cpp/: CMakeLists.txt  main.cpp
test_apps/gui/: CMakeLists.txt  app.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tracebutton.cpp  tracebutton.h  tracebutton.ui  tracer.cpp  tracer.h  tracer.ui  tracer_off.cpp
test_apps/gui/test_data/: unilog.conf
test_apps/gui/test_images/: 16s_2ch.tif  16u_4ch.tif  32f_1ch.tif  32s_1ch.tif  32s_1ch_2.tif  64f_2ch.tif  8u_1ch.tif  8u_2ch.tif
test_apps/lib0/: CMakeLists.txt  lib0.cpp  lib0.h
test_apps/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
test_apps/lib2/: CMakeLists.txt  lib1.cpp  lib1.h
test_apps/qt4/: CMakeLists.txt  app.qrc  main.cpp
trace_x/impl/: types.h
